traefik-httpbin.yaml
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: httpbin
  namespace: default
spec:
  rules:
  - host: httpbin.minikube
    http:
      paths:
      - path: /
        backend:
          serviceName: httpbin
          servicePort: 8000
